--- a/TweetAndroidApp/app/src/main/AndroidManifest.xml
+++ b/TweetAndroidApp/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@drawable/main_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.TweetAndroidApp"
+        android:name=".MyApplication"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
