--- a/TweetAndroidApp/gradle/libs.versions.toml
+++ b/TweetAndroidApp/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.5.1"
+bcprovJdk15to18 = "1.78.1"
 ic4j = "0.7.4"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
@@ -12,11 +13,14 @@ activity = "1.9.2"
 constraintlayout = "2.1.4"
 navigationFragmentKtx = "2.8.1"
 databindingRuntime = "8.6.1"
+okhttp = "4.12.0"
+slf4jAndroid = "1.7.36"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationFragmentKtx" }
+bcprov-jdk18on = { module = "org.bouncycastle:bcprov-jdk18on", version.ref = "bcprovJdk15to18" }
 ic4j-agent = { module = "org.ic4j:ic4j-agent", version.ref = "ic4j" }
 ic4j-candid = { module = "org.ic4j:ic4j-candid", version.ref = "ic4j" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -27,6 +31,8 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-databinding-runtime = { group = "androidx.databinding", name = "databinding-runtime", version.ref = "databindingRuntime" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+slf4j-android = { module = "org.slf4j:slf4j-android", version.ref = "slf4jAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
